# tflite-micro-rpi0

./: .gitignore  CMakeLists.txt  README.md  tflite_micro_runtime-1.0.0-cp37-cp37m-linux_armv6l.whl
tensorflow/lite/experimental/image_transform/: CMakeLists.txt  README.md  get_transform.cc  image_transform.h  standardize_mean_and_std.cc  transform_image.cc
tensorflow/lite/experimental/image_transform/internal/: cvdef.h  interface.h  mat.hpp  mat.inl.hpp  saturate.hpp  types.hpp
tensorflow/lite/micro/: CMakeLists.txt  micro_interpreter.cc  micro_interpreter.h
tensorflow/lite/micro/kernels/cmsis_nn/: pooling.cc
tensorflow/lite/micro/python/: __init__.py  image_transform.py  interpreter.py  runtime_comparison.py  test_image_transform.py  test_interpreter.py
tensorflow/lite/micro/python/interpreter_wrapper/: CMakeLists.txt  allocation.cc  allocation.h  image_transform_wrapper.cc  image_transform_wrapper.h  interpreter_wrapper.cc  interpreter_wrapper.h  interpreter_wrapper_pybind11.cc  model_builder.cc  model_builder.h  numpy.cc  numpy.h  python_error_reporter.cc  python_utils.cc  python_utils.h
tensorflow/lite/micro/tools/make/: gemmlowp_download.sh  ruy_download.sh
tensorflow/lite/micro/tools/rpi0/: Dockerfile.pi-python37  build_tflite_micro_wrapper.sh  install_tflite_micro.sh
tensorflow/lite/micro/tools/rpi0/install/: install_tflite_micro.sh
tensorflow/lite/micro/tools/rpi0_pip_package/: build_pip_package.sh  build_pip_package37.sh  build_pip_package39.sh  build_tflite_micro_wrapper.sh  install_python.sh  install_python37.sh  install_python39.sh  install_tflite_micro.sh  patch_cmsis.py  setup_with_binary.py  setup_with_binary39.py
tensorflow/lite/tools/cmake/: .gitignore  arm-linux-gnueabihf_python3.7m_pyconfig.h  download_toolchains.sh  rpi0_toolchain.cmake
